force-app/main/default/objects/Inspection__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Aerial</fullName><label>Aerial</label><default>false</default></value>
            <value><fullName>Ground</fullName><label>Ground</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>