force-app/main/default/objects/Inspection__c/fields/Wind_Speed__c.field-meta.xml
<CustomField>
    <fullName>Wind_Speed__c</fullName>
    <label>Wind Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Calm</fullName><label>Calm (0-5 mph)</label><default>false</default></value>
            <value><fullName>Moderate</fullName><label>Moderate (6-15 mph)</label><default>false</default></value>
            <value><fullName>High</fullName><label>High (16-30 mph)</label><default>false</default></value>
            <value><fullName>Extreme</fullName><label>Extreme (30+ mph)</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>